Refactoring: removed useless stuff, wrote documentation for functions

--- a/src/friend-finder.ipynb
+++ b/src/friend-finder.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "#START\n",
     "#this is my token (Pitágoras)\n",
-    "token = \"EAACEdEose0cBAPjctkkb2wngNx0TavRZCKAKTXwmtESkCmlBHMxA3QpMwwcUzYPn1n04PHxp2Bs421GM93RnNYwQXyNbkcc54ZAxtYLzipizPJsjWWrFjn9vZBYHADOgTEZBnhYpV5dYkbdPftGpqdXSDtgTt2Ark8GuO4D7oERcmYfOZB4TDCMCYV15v76wZD\"\n",
+    "token = \"EAACEdEose0cBAH2ihx79uCdJ2GdqTsDgBJAy1LJZBTKaTyg4w7Tl9nI3n43cIaJAHrEYK0jJ5QtWiIgTXieVJ56ze0872vYGKcsXZCi1aygDXUiJ3Fo3c6VLBa0OukO5pLZCW1RTjhAjkGzA2OxSDZACKdPxDc1LNrk2mzkeQ9fD0pjeHVOCH3zqgVxI3ysZD\"\n",
     " \n",
     "#ID of \"Pitagoras\"\n",
     "otherPersonID = \"10208935375967359\"\n",
@@ -96,7 +96,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Classifies pages by categories, the category with more pages gets 1.0\n",
+    "#and the smaller categories get smaller and smaller classifications...\n",
+    "#   cats        dictionary of categories found, each with it's own array of pages\n",
+    "#       {c1 : [page1, page2, page3...], c2 : [page4, page5], c3 : [page6]...}\n",
+    "#   return      dictionary of pages, each with it's own classification (0.0 < classification <= 1.0)\n",
+    "#       {page1 : x, page2 : x, page4 : y, page6 : z}\n",
+    "def classify(cats):\n",
+    "    classification = dict()\n",
+    "    biggestCat = \"\"\n",
+    "    biggestCatLen = 0\n",
+    "    for cat, pages in cats.items():\n",
+    "        if(len(pages) > biggestCatLen):\n",
+    "            biggestCat = cat\n",
+    "            biggestCatLen = len(pages)\n",
+    "    for cat, pages in cats.items():\n",
+    "        classify = len(pages)/biggestCatLen\n",
+    "        for i in pages:\n",
+    "            classification[i] = classify\n",
+    "\n",
+    "    return classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "normalWeigth = [25, 18, 15, 12, 10, 8, 6, 4, 2, 1]\n",
+    "\n",
+    "# Normalizes the value previously attributed to each category of page\n",
+    "# Acording to the array 'normalWeigth', the category with the highest value\n",
+    "# receives a value of 25, the 2º 18, the 3º 15 and soo on... starting from the 10º,\n",
+    "# all categories receive a value of 1.\n",
+    "# c        dictionary of categories, each with its given value\n",
+    "# return   dictionary of categories, normalized\n",
+    "def norm(c):\n",
+    "    tuples = list()\n",
+    "    sortedByVal = sorted(c.items(), key=operator.itemgetter(1))\n",
+    "    \n",
+    "    for i in range(0, len(sortedByVal)-11):\n",
+    "        tup = sortedByVal[i]\n",
+    "        tuples.append((tup[0], 1))\n",
+    "    count = 9\n",
+    "    for i in range(len(sortedByVal)-9, len(sortedByVal)):\n",
+    "        a = normalWeigth[count]\n",
+    "        if(i > 0):\n",
+    "            tup = sortedByVal[i]\n",
+    "            tuples.append((tup[0], a))\n",
+    "            count = count - 1\n",
+    "    newDict = dict()\n",
+    "    for t in tuples:\n",
+    "        newDict[t[0]] = t[1]\n",
+    "    return newDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -107,27 +174,7 @@
     "#   token   access token\n",
     "#   return  array of page IDs\n",
     "#       [page1, page2, page3...]\n",
-    "def getPagesList(user, token):\n",
-    "    pages = list()\n",
-    "    graph = fb.GraphAPI(access_token=token, version='2.7')\n",
-    "    resource = graph.get_object(user+\"/likes?fields=name\")\n",
-    "    #print(resource)\n",
-    "    cats = dict()\n",
-    "    while(True):\n",
-    "        for page in resource['data']:\n",
-    "            pages.append(page['id'])\n",
-    "        # Attempt to make a request to the next page of data, if it exists.\n",
-    "        try:\n",
-    "            resource=req.get(resource['paging']['next']).json()\n",
-    "        except KeyError:\n",
-    "            #print(\"Finished getting pages from user \" + user)\n",
-    "            # When there are no more pages (['paging']['next']), break from the\n",
-    "            # loop and end the script.\n",
-    "            break\n",
-    "    return pages\n",
-    "\n",
-    "\n",
-    "def getPagesListFriends(user, token):\n",
+    "def getPagesFromUser(user, token):\n",
     "    pages = list()\n",
     "    try:\n",
     "        graph = fb.GraphAPI(access_token=token, version='2.7')\n",
@@ -151,80 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Classifies pages by categories, the category with more pages gets 1.0\n",
-    "#and the smaller categories get smaller and smaller classifications...\n",
-    "#   cats        dictionary of categories found, each with it's own array of pages\n",
-    "#       {c1 : [page1, page2, page3...], c2 : [page4, page5], c3 : [page6]...}\n",
-    "#   return      dictionary of pages, each with it's own classification (0.0 < classification <= 1.0)\n",
-    "#       {page1 : x, page2 : x, page4 : y, page6 : z}\n",
-    "def classify(cats):\n",
-    "    classification = ddict()\n",
-    "    biggestCat = \"\"\n",
-    "    biggestCatLen = 0\n",
-    "    for cat, pages in cats.items():\n",
-    "        if(len(pages) > biggestCatLen):\n",
-    "            biggestCat = cat\n",
-    "            biggestCatLen = len(pages)\n",
-    "    for cat, pages in cats.items():\n",
-    "        classify = len(pages)/biggestCatLen\n",
-    "        for i in pages:\n",
-    "            classification[i] = classify\n",
-    "\n",
-    "    return classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import operator\n",
-    "\n",
-    "def norm(c):\n",
-    "    tuples = list()\n",
-    "    sortedByVal = sorted(c.items(), key=operator.itemgetter(1))\n",
-    "    \n",
-    "    w = [25, 18, 15, 12, 10, 8, 6, 4, 2, 1]\n",
-    "    for i in range(0, len(sortedByVal)-11):\n",
-    "        tup = sortedByVal[i]\n",
-    "        tuples.append((tup[0], 1))\n",
-    "    count = 9\n",
-    "    for i in range(len(sortedByVal)-9, len(sortedByVal)):\n",
-    "        a = w[count]\n",
-    "        if(i > 0):\n",
-    "            tup = sortedByVal[i]\n",
-    "            tuples.append((tup[0], a))\n",
-    "            count = count - 1\n",
-    "    newDict = dict()\n",
-    "    for t in tuples:\n",
-    "        newDict[t[0]] = t[1]\n",
-    "    return newDict\n",
-    "\n",
-    "#d = {\"11\" : 0.2, \"1\" : 0.3, \"04\" : 0.4, \"07\" : 0.8}\n",
-    "#print(d)\n",
-    "#d1 = norm(d)\n",
-    "#print(d1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "#Calculates the similarity between a user \n",
+    "#and the current user we are searching friends for\n",
+    "#user              The ID of the other user\n",
+    "#classification    The classification of each page \n",
+    "#                  the current user likes\n",
+    "#token             Current user access token\n",
+    "#return            The similarity rate, in float\n",
     "def similarityWith(user, classification, token):\n",
-    "    otherUserPages = getPagesListFriends(user, token)\n",
+    "    otherUserPages = getPagesFromUser(user, token)\n",
     "    rate = 0.0\n",
     "    for page in otherUserPages:\n",
     "        if page in classification:\n",
@@ -234,13 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# return dict { id1 : friend_name1, id2 : friend_name2 }\n",
+    "#Get only the friends of the user\n",
+    "#user     The user to search friends\n",
+    "#token    Access token\n",
+    "#return   The user's friends:\n",
+    "#            dict { id1 : friend_name1, id2 : friend_name2 }\n",
     "def getFriends(user, token):\n",
     "    graph = fb.GraphAPI(access_token=token, version='2.7')\n",
     "    resource = graph.get_object(\"/\" + user + \"/friends\")\n",
@@ -257,17 +249,13 @@
     "            # loop and end the script.\n",
     "            break\n",
     "\n",
-    "    return friends"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return friends\n",
+    "\n",
+    "#Get the friends of the user and friends of friends too\n",
+    "#user     The user where the search for users starts\n",
+    "#token    Access token\n",
+    "#return   A dict of users:\n",
+    "#            dict { id1 : friend_name1, id2 : friend_name2 }\n",
     "def getUsersDict(user, token):\n",
     "    friends = getFriends(user, token)\n",
     "    ffriends = dict() \n",
@@ -293,158 +281,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "myfriends = getFriends('me', token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#users = getUsersDict('me', token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cats = getCats(token)\n",
-    "classf = norm(classify(cats))\n",
-    "\n",
-    "otherUserPages = getPagesList(otherPersonID, token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def getUserNameFromID(id, token):\n",
-    "    res = graph.get_object(\"/\" + user + \"?fields=name\")\n",
-    "    return res[\"name\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def getUserName(sortedDF, users):\n",
-    "    name = dict()\n",
-    "    for id, row in sortedDF.iterrows():\n",
-    "        name[id] = users[id]\n",
-    "    sortedDF['user-name'] = sortedDF['user-id'].map(users)\n",
-    "    return sortedDF\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def calcSimilarityAndAddTo(key, classf, token, similarityDict):\n",
-    "    ratio = similarityWith(key, classf, token)\n",
-    "    #if(ratio > 0.000):\n",
-    "    similarityDict[key] = ratio\n",
-    "    return ratio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import threading\n",
+    "threadsLimit = 32\n",
     "lock = threading.Lock()\n",
     "\n",
-    "def simCalcFunction(key, classf, token, similarityDict, threadsRunning):\n",
+    "#This function is supposed to be used as a thread to calculate users similarities\n",
+    "#When started, informs the counter that a new thread is running, and at the end,\n",
+    "#informs the counter that its no longer running.\n",
+    "#It uses a lock for safe concurrency.\n",
+    "#When the similarity ratio has been calculated, stores it on similarityDict\n",
+    "def similarityCalcThread(key, classf, token, similarityDict, threadsRunning):\n",
     "    lock.acquire()\n",
     "    threadsRunning = threadsRunning + 1\n",
     "    lock.release()\n",
     "    \n",
-    "    ratio = calcSimilarityAndAddTo(key, classf, token, similarityDict)\n",
+    "    ratio = similarityWith(key, classf, token)\n",
+    "    similarityDict[key] = ratio\n",
     "    \n",
     "    lock.acquire()\n",
-    "    #print(key + \" similarity with me is \" + str(ratio))\n",
     "    threadsRunning = threadsRunning - 1\n",
-    "    lock.release()"
+    "    lock.release()\n",
+    "\n",
+    "#Uses paralell processing to calculate the similarity of many users at the same time\n",
+    "#Waits for all the similarity's calculating threads to end\n",
+    "#Has a limit of running threads\n",
+    "def getSimilarityDict(friends, classf, token):\n",
+    "    similarityDict = dict()\n",
+    "    threadsRunning = 0\n",
+    "    threads = list()\n",
+    "    for key, value in friends.items():\n",
+    "        while(threadsRunning > threadsLimit):\n",
+    "            i = 1\n",
+    "            #do nothing\n",
+    "        t = threading.Thread(target=similarityCalcThread,\n",
+    "                             args = (key, classf, token, similarityDict, threadsRunning))\n",
+    "        t.daemon = False\n",
+    "        threads.append(t)\n",
+    "        t.start()\n",
+    "    \n",
+    "    #make sure ALL threads have ended\n",
+    "    for x in threads:\n",
+    "         x.join()\n",
+    "    return similarityDict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time to use the functions created above to do cool stuff\n",
+    "### The major problem with our proposal was that, since version 2.0, the Graph API only lets you access friend's likes. This eliminates the possibility of using like's similarity to compare two users that are not friends.\n",
+    "### So, for demonstration porpuses, we are only classifying the friends of the user."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "users = getFriends('me', token)\n",
+    "#users = getUsersDict('me', token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We get the page categories, classify and normalize them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "started thread for user 10208935375967359\n",
-      "started thread for user 862034200484130\n",
-      "started thread for user 998100796886441\n",
-      "started thread for user 100000888984231\n",
-      "started thread for user 967446623299200\n",
-      "started thread for user 773541116034720\n",
-      "started thread for user 739425496128479\n",
-      "started thread for user 100002211536120\n",
-      "started thread for user 765831436837419\n",
-      "started thread for user 100002541369604\n",
-      "started thread for user 653306944773428\n",
-      "started thread for user 607827396001201\n",
-      "started thread for user 644347655699194\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "count = 0\n",
-    "limit = 32\n",
-    "similarityDict = dict()\n",
-    "threadsRunning = 0\n",
-    "threads = list()\n",
-    "for key, value in myfriends.items():\n",
-    "    while(threadsRunning > limit):\n",
-    "        i = 1\n",
-    "        #do nothing\n",
-    "    t = threading.Thread(target=simCalcFunction, args = (key, classf, token, similarityDict, threadsRunning))\n",
-    "    t.daemon = False\n",
-    "    threads.append(t)\n",
-    "    t.start()\n",
-    "    \n",
-    "for x in threads:\n",
-    "     x.join()"
+    "cats = getCats(token)\n",
+    "classf = norm(classify(cats))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now its time for the heavy processing, calculating the similarity with the other users"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "simDict = getSimilarityDict(users, classf, token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas time! We got all the data, let's build the DataFrame and sort it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -474,18 +428,22 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "s = pd.Series(similarityDict, name='similarity')\n",
+    "#Making a series out of the similarity dict\n",
+    "s = pd.Series(simDict, name='similarity')\n",
     "s.index.name = 'user-id'\n",
     "s.reset_index()\n",
+    "#Turn it into a dataframe and sort it\n",
     "df_similarity = s.to_frame()\n",
     "sortedDF = df_similarity.sort_values([\"similarity\"], ascending=[False])\n",
     "\n",
-    "usersSeries = pd.Series(myfriends, name='user-name')\n",
+    "#Now, append the user names, because we are humans\n",
+    "usersSeries = pd.Series(users, name='user-name')\n",
     "usersSeries.index.name = 'user-id'\n",
     "usersSeries.reset_index()\n",
     "usersDF = usersSeries.to_frame()\n",
-    "\n",
     "sortedDF['user-name'] = usersDF['user-name']\n",
+    "\n",
+    "#The final step\n",
     "print (sortedDF)"
    ]
   },
